[package]
name = "runic-kit"
version = "0.0.1"
edition = "2024"
authors = ["Zachary Lesser <zacmlesser-7@outlook.com>"]
description = "Minimalist Rust toolkit for building lexers, parsers, interpreters, transpilers, and compilers from scratch."
license = "MIT"
repository = "https://github.com/SpideyZac/runic"
homepage = "https://github.com/SpideyZac/runic"
readme = "README.md"
keywords = ["lexer", "parser", "interpreter", "transpiler", "compiler"]
categories = ["parsing"]

[dependencies]
colored = "3.0.0"
